# cwcwm

./: .gitignore  BUILD_GUIDE.md  LICENSE.md  Makefile  README.md  build-deps.sh  default.nix  flake.nix  meson.build  meson.options
cwctl/: cmd-screen.c  cwctl.h  gen.py  ipc-common.c  main.c  meson.build
cwctl/script/: binds.lua  client.lua  input.lua  plugin.lua  screen.lua
defconfig/: conf.lua  keybind.lua  oneshot.lua  rc.lua
docs/: 00-getting-started.md  05-building.md  10-changelog.md  30-custom-layout.md  80-c-plugin.md  config.ld  ldoc.css  ldoc.ltp
include/cwc/: config.h  ipc.h  luac.h  luaclass.h  luaobject.h  process.h  server.h  signal.h  timer.h  types.h  util.h
include/cwc/desktop/: idle.h  layer_shell.h  output.h  session_lock.h  toplevel.h  transaction.h
include/cwc/input/: cursor.h  keyboard.h  manager.h  seat.h  switch.h  tablet.h  text_input.h  touch.h
include/cwc/layout/: bsp.h  container.h  master.h
include/cwc/protocol/: dwl_ipc_v2.h
include/private/: callback.h  luac.h  server.h
lib/: config.lua
lib/cuteful/: enum.lua  init.lua  kbd.lua  pointer.lua  rules.lua  screen.lua  tag.lua
lib/impl/: border.lua  init.lua
nix/: default.nix  nixos-module.nix
plugins/: cwcle.c  dwl-ipc.c  flayout.c  meson.build
protocol/: meson.build
scripts/: build-deps.sh
src/: config.c  defaultcfg.lua  luac.c  luaclass.c  luaobject.c  main.c  meson.build  plugin.c  process.c  server.c  signal.c  util-map.c  util-vec.c  util.c  xwayland.c
src/desktop/: idle.c  layer_shell.c  output.c  session_lock.c  toplevel.c  transaction.c  xwayland.c
src/input/: cursor.c  keybinding.c  keyboard.c  manager.c  seat.c  switch.c  tablet.c  text_input.c  touch.c
src/ipc/: common.c  server.c
src/layout/: bsp.c  container.c  master.c
src/objects/: client.c  container.c  input.c  kbd.c  kbind.c  kbindmap.c  layer_shell.c  pointer.c  screen.c  tablet.c  tag.c  timer.c
src/protocol/: dwl_ipc_v2.c
tests/: kbindgen.lua  meson.build  rc.lua  vec.c
tests/luapi/: client.lua  container.lua  input.lua  kbd.lua  kbinding.lua  layer_shell.lua  plugin.lua  pointer.lua  screen.lua  signal.lua  tablet.lua  tag.lua
